--- a/sass/layouts/layout__1024/_gallery.scss
+++ b/sass/layouts/layout__1024/_gallery.scss
@@ -1,8 +1,5 @@
 .gallery {
-    .container {
-        margin-bottom: 150px;
-    }
-
+    padding: 150px 0;
     &__title {
         margin-bottom: 90px;
     }
