--- a/sass/layouts/layout__768/_hero-slider.scss
+++ b/sass/layouts/layout__768/_hero-slider.scss
@@ -1,10 +1,12 @@
 .hero {
-    &__slide-content {
-        span {
-            font-size: rem(70px);
-        }
-        p {
-            font-size: rem(16px);
+    .swiper {
+        &-content {
+            span {
+                font-size: rem(65px);
+            }
+            p {
+                font-size: rem(15px);
+            }
         }
     }
 }
