--- a/sass/layouts/layout__000/_gallery.scss
+++ b/sass/layouts/layout__000/_gallery.scss
@@ -1,11 +1,10 @@
-.gallery {
+.gallery {    
+    padding: 75px 0;
     .container {
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin-bottom: 75px;
     }
-
     &__title {
         margin-bottom: 50px;
     }
