--- a/sass/layouts/layout__000/_projects.scss
+++ b/sass/layouts/layout__000/_projects.scss
@@ -1,6 +1,5 @@
 .projects {
-    padding-top: 50px;
-    margin-bottom: 75px;
+    padding: 50px 0 75px;
     &__title {
         margin-bottom: 50px; 
     }
