--- a/sass/layouts/layout__1024/_hero-slider.scss
+++ b/sass/layouts/layout__1024/_hero-slider.scss
@@ -1,10 +1,12 @@
 .hero {
-    &__slide-content {
-        span {
-            font-size: rem(80px);
-        }
-        p {
-            font-size: rem(18px);
+    .swiper {
+        &-content {
+            span {
+                font-size: rem(75px);
+            }
+            p {
+                font-size: rem(18px);
+            }
         }
     }
 }
