--- a/sass/layouts/layout__1024/_news.scss
+++ b/sass/layouts/layout__1024/_news.scss
@@ -1,15 +1,29 @@
 .news {
-// background-image: url('/img/news/city@2x.jpg');
-// background-repeat: no-repeat;
-// background-size: 100% auto;
-// background-position: 100% bottom;
 padding: 120px 0;
-margin-bottom: 150px;
     &__title {
         margin-bottom: 90px;
     }
-    &__wrapper {}
-    &__swiper {}
+    .swiper {
+        padding-bottom: 60px;
+        &-button-prev, &-button-next {
+            display: block;
+            color: transparent;
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
+            width: 40px;
+            height: 40px;
+        }
+
+        &-button-prev {
+            background-image: url('/img/news/left.svg');
+            left: 0
+        }
+        &-button-next {
+            background-image: url('/img/news/right.svg');
+            right: 0;
+        }
+    }
 
     .content {
         &__title {
@@ -26,14 +40,3 @@ margin-bottom: 150px;
         }
     }
 }
-
-.swiper {
-}
-.swiper-wrapper {
-}
-.swiper-slide {
-    &__content {}
-}
-.swiper-pagination {}
-.swiper-button-prev {}
-.swiper-button-next {}
