--- a/sass/layouts/layout__1024/_projects.scss
+++ b/sass/layouts/layout__1024/_projects.scss
@@ -1,6 +1,5 @@
 .projects {
-    margin-bottom: 150px;
-    padding-top: 100px;
+    padding: 100px 0 150px;
     &__title {
         margin-bottom: 90px;
     }
