--- a/sass/layouts/layout__768/_gallery.scss
+++ b/sass/layouts/layout__768/_gallery.scss
@@ -1,8 +1,5 @@
 .gallery {
-    .container {
-        margin-bottom: 100px;
-    }
-
+    padding: 100px 0;
     &__title {
         margin-bottom: 70px;
     }
