--- a/css/style.css
+++ b/css/style.css
@@ -464,7 +464,7 @@ img {
   font-size: 0.75rem;
   color: #2C4058;
   line-height: 1.667;
-  margin-bottom: 20px;
+  margin-bottom: 15px;
 }
 .projects__button {
   margin-bottom: 30px;
@@ -495,6 +495,9 @@ img {
   overflow: hidden;
   padding-bottom: 35px;
 }
+.news .swiper-wrapper {
+  max-width: 1200px;
+}
 .news .swiper-slide {
   display: flex;
   justify-content: center;
@@ -513,7 +516,7 @@ img {
   border: 1px solid #fff;
 }
 .news .swiper-pagination-bullet:not(:last-child) {
-  margin-right: 40px;
+  margin-right: 30px;
 }
 .news .swiper-pagination-bullet-active {
   background-color: #fff;
@@ -563,6 +566,11 @@ img {
   color: #2C4058;
   line-height: 1.35;
   margin-bottom: 39px;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .news .content__person {
   display: flex;
@@ -666,12 +674,12 @@ img {
   background-position: 0 100%;
 }
 .contact__title {
-  margin-bottom: 21px;
+  margin-bottom: 22px;
 }
 .contact__wrapper {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 19px;
 }
 .contact__list {
   display: flex;
@@ -682,8 +690,9 @@ img {
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
   font-size: 0.875rem;
-  line-height: 1.555;
+  line-height: 1.556;
   color: #000;
+  letter-spacing: 0.05rem;
 }
 .contact__list-item .icon {
   width: 13px;
@@ -788,6 +797,9 @@ img {
     grid-row: span 2;
     grid-column: span 2;
   }
+  .news .swiper-pagination-bullet:not(:last-child) {
+    margin-right: 40px;
+  }
   .contact__info {
     padding: 50px;
   }
@@ -838,6 +850,7 @@ img {
     flex-direction: row;
     gap: 35px;
     position: relative;
+    padding-top: 55px;
   }
   .projects__image {
     flex-basis: 56%;
@@ -867,7 +880,7 @@ img {
   }
   .projects__text {
     font-size: 1rem;
-    margin-bottom: 25px;
+    margin-bottom: 20px;
   }
   .projects__button {
     margin-bottom: 40px;
@@ -1072,7 +1085,7 @@ img {
   }
   .projects__text {
     font-size: 1.125rem;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
   }
   .projects__button {
     margin-bottom: 60px;
@@ -1089,6 +1102,7 @@ img {
   }
   .news .swiper {
     padding-bottom: 60px;
+    padding: 0 50px 60px;
   }
   .news .swiper-button-prev, .news .swiper-button-next {
     display: block;
@@ -1145,7 +1159,7 @@ img {
     gap: 50px;
   }
   .contact__list {
-    gap: 28px;
+    gap: 30px;
   }
   .contact__list-item .icon {
     width: 15px;
@@ -1155,7 +1169,7 @@ img {
     gap: 28px;
   }
   .contact__form-input {
-    padding-bottom: 9px;
+    padding-bottom: 12px;
     font-size: 1.125rem;
   }
   .contact__form-submit {
