--- a/sass/layouts/layout__000/_news.scss
+++ b/sass/layouts/layout__000/_news.scss
@@ -10,6 +10,9 @@
     .swiper {
         overflow: hidden;
         padding-bottom: 35px;
+        &-wrapper {
+            max-width: 1200px;
+        }
         &-slide {
             display: flex;
             justify-content: center;
@@ -27,7 +30,7 @@
             background-color: transparent;
             border: 1px solid $whiteColor;
             &:not(:last-child) {
-                margin-right: 40px;
+                margin-right: 30px;
             }
             &-active {
                 background-color: $whiteColor;
@@ -79,6 +82,12 @@
             color: $darkGrayColor;
             line-height: 1.35;
             margin-bottom: 39px;
+            
+            display: -webkit-box;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
         &__person {
             display: flex;
