--- a/sass/layouts/layout__000/_projects.scss
+++ b/sass/layouts/layout__000/_projects.scss
@@ -37,23 +37,23 @@
     &__subtitle {
         font-family: $montserratFont;
         font-weight: 400;
-        font-size: rem(14px);    // 22px
+        font-size: rem(14px);
         color: $darkGrayColor;
         line-height: 1.227;
         text-transform: uppercase;
     }
 
     &__title {
-        margin-bottom: 10px;    // 19px
+        margin-bottom: 10px;
     }
 
     &__text {
         font-family: $openSansFont;
         font-weight: 400;
-        font-size: rem(12px);    // 18px
+        font-size: rem(12px);
         color: $darkGrayColor;
         line-height: 1.667;
-        margin-bottom: 20px;    // 40px
+        margin-bottom: 15px;
     }
 
     &__button {
@@ -65,7 +65,7 @@
         font-family: $openSansFont;
         font-weight: 400;
         font-style: italic;
-        font-size: rem(11px);   // 15px
+        font-size: rem(11px);
         .icon {
             fill: $darkGrayColor;
             width: 9px;
