--- a/sass/layouts/layout__768/_projects.scss
+++ b/sass/layouts/layout__768/_projects.scss
@@ -10,6 +10,7 @@
         flex-direction: row;
         gap: 35px;
         position: relative;
+        padding-top: 55px;
     }
     &__image {
         flex-basis: 56%;
@@ -39,7 +40,7 @@
     }
     &__text {
         font-size: rem(16px);
-        margin-bottom: 25px;
+        margin-bottom: 20px;
     }
     &__button {
         margin-bottom: 40px;
