--- a/sass/layouts/layout__000/_contact.scss
+++ b/sass/layouts/layout__000/_contact.scss
@@ -10,7 +10,7 @@
 
     &__info {
         padding: 30px;
-        background: url('/img/contacts-bg.png');
+        background: url('../img/contacts-bg.png');
         background-repeat: no-repeat;
         background-position: 0 100%;
     }
