--- a/sass/layouts/layout__000/_news.scss
+++ b/sass/layouts/layout__000/_news.scss
@@ -1,7 +1,7 @@
 .news {
     position: relative;
     padding: 60px 0;
-    background: url('/img/news-bg.png'), linear-gradient(237.1deg, #24CCFA 11.16%, #3C7FD4 89.18%);
+    background: url('../img/news-bg.png'), linear-gradient(237.1deg, #24CCFA 11.16%, #3C7FD4 89.18%);
     background-repeat: no-repeat;
     background-position: 0 100%;
     &__title {
