--- a/css/style.css
+++ b/css/style.css
@@ -669,7 +669,7 @@ img {
 }
 .contact__info {
   padding: 30px;
-  background: url("../img/contacts-bg.png");
+  background-image: url("../img/contacts-bg.png");
   background-repeat: no-repeat;
   background-position: 0 100%;
 }
