--- a/sass/layouts/layout__000/_footer.scss
+++ b/sass/layouts/layout__000/_footer.scss
@@ -20,7 +20,7 @@
     }
     &__rights{
         font-family: $montserratFont;
-        font-size: rem(10px);   //12px
+        font-size: rem(10px);
         font-weight: 400;
         line-height: 1.2;
         color: $whiteColor;
