--- a/sass/layouts/layout__000/_general.scss
+++ b/sass/layouts/layout__000/_general.scss
@@ -43,12 +43,12 @@ img{vertical-align: top;}
 .title {
     font-family: $montserratFont;
     font-weight: 700;
-    font-size: rem(22px);    // 44px
+    font-size: rem(22px);
     line-height: 1.22;
     text-transform: uppercase;
     color: $darkGrayColor;
     &--section{
-        padding-top: 16px;    // 31px;
+        padding-top: 16px;
         text-align: center;
         position: relative;
         &::before {
