--- a/sass/layouts/layout__768/_general.scss
+++ b/sass/layouts/layout__768/_general.scss
@@ -1,6 +1,6 @@
 .title {
-    font-size: rem(33px);    // 44px
+    font-size: rem(33px);
     &--section{
-        padding-top: 22px;    // 31px;
+        padding-top: 22px;
     }
 }
