--- a/sass/layouts/layout__000/_news.scss
+++ b/sass/layouts/layout__000/_news.scss
@@ -36,11 +36,10 @@
                 background-color: $whiteColor;
             }
         }
-        &-button-prev {
-            display: none;
-        }
-        &-button-next {
-            display: none;
+
+        &-button-prev:after, 
+        &-button-next:after {
+            content: unset;
         }
     }
 
