--- a/sass/layouts/layout__1024/_contact.scss
+++ b/sass/layouts/layout__1024/_contact.scss
@@ -7,12 +7,13 @@
     }
     &__wrapper {
         flex-direction: row;
-        gap: 50px;
+        gap: 40px;
     }
     &__list {
         gap: 30px;
     }
     &__list-item {
+        font-size: rem(18px);
         .icon {
             width: 15px;
             height: 15px;
