--- a/sass/layouts/layout__768/_contact.scss
+++ b/sass/layouts/layout__768/_contact.scss
@@ -10,7 +10,7 @@
         z-index: 5;
         transform: translateX(-50%);
         padding: 60px 50px; 
-        background: url('/img/contacts-bg.png'), rgb(255, 255, 255);
+        background: url('../img/contacts-bg.png'), rgb(255, 255, 255);
         background-repeat: no-repeat;
         background-position: 0 100%;
     }
@@ -22,7 +22,7 @@
         gap: 35px;
     }
     &__list {
-        width: 300px;
+        width: 310px;
         gap: 18px;
     }
     &__list-item {
