--- a/sass/layouts/layout__000/_social.scss
+++ b/sass/layouts/layout__000/_social.scss
@@ -6,7 +6,7 @@
         width: 40px;
         height: 40px;
         transition: transform .5s ease;
-        &:hover {
+        &:hover, &:focus {
             transform: scale(1.3);
         }
         &:active {
