--- a/sass/layouts/layout__576/_footer.scss
+++ b/sass/layouts/layout__576/_footer.scss
@@ -4,6 +4,7 @@
     &__wrapper{
         flex-direction: row;
         justify-content: space-between;
+        align-items: center;
         margin-bottom: 41px;
         gap: 0;
     }
