--- a/sass/style.scss
+++ b/sass/style.scss
@@ -21,3 +21,7 @@
 @media only screen and (min-width: 1200px) {
     @import "layouts/layout__1200/index";
 }
+
+@media only screen and (min-width: 1600px) {
+    @import "layouts/layout__1600/index";
+}
